Fin fase 1 para pantalla de ventas.

--- a/Multisistemas/WebContent/resources/css/template.css
+++ b/Multisistemas/WebContent/resources/css/template.css
@@ -501,3 +501,8 @@ body.menu-active div.container div.content .menu-trigger {
 .rojo{
 	color:#d73925;
 }
+
+#loginForm{
+	width:50%;
+	margin:0 auto;
+}
